--- a/themes/dinnerdelights/layout/layout.ejs
+++ b/themes/dinnerdelights/layout/layout.ejs
@@ -81,7 +81,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-                    <div class="about-heading">
+                    <div class="section-heading">
                         <h2>about</h2>
                         <p>Welcome to Nights of Dinner Delights!</p>
                     </div>
@@ -106,7 +106,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-md-6 col-md-offset-3">
-                    <div class="service-heading">
+                    <div class="section-heading">
                         <h2>services and pricing</h2>
                     </div>
                 </div>
@@ -183,22 +183,34 @@
         </div>
     </div>
     <div id="menu">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+                    <div class="section-heading">
+                        <h2>Menu</h2>
+                    </div>
+                </div>
+            </div>
+        </div>    
     </div>
     <!--faq-->
     <div id="faq">
         <div class="container">
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+                    <div class="section-heading">
+                        <h2>FAQ</h2>
+                    </div>
                 </div>
             </div>
-        </div>
+        </div>    
     </div>
     <!--contact form-->
     <div id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-                    <div class="contact-heading">
+                    <div class="section-heading">
                         <h2>Contact</h2>
                     </div>
                 </div>
