--- a/themes/dinnerdelights/source/css/style.css
+++ b/themes/dinnerdelights/source/css/style.css
@@ -400,25 +400,26 @@ textarea:focus {
 	height: 12px;
 }
 
-/*About*/
-#about {
-	padding: 80px;
-}
-
-#about .about-heading {
+/* Section Headings */
+.section-heading {
 	text-align: center;
 }
 
-#about .about-heading h2 {
+.section-heading h2 {
 	font-weight: 700;
 	font-size: 45px;
 }
 
-#about .about-heading p {
+.section-heading p {
 	margin-top: 20px;
 	line-height: 25px;
 	color: #8e8e8e;
 	margin-bottom: 50px;
+}
+
+/*About*/
+#about {
+	padding: 80px;
 }
 
 #about .about-content {
@@ -426,310 +427,7 @@ textarea:focus {
 	padding: 80px 150px;
 }
 
-/*#about .about-left {
-	position: relative;
-    z-index: 2;
-}
-
-#about .about-right:before {
-	content: "";
-    border: 8px solid #e5eef0;
-	width: 120%;
-    height: 100%;
-    position: absolute;
-    right: 0;
-    top: 0;
-}
-
-#about .about-right {
-	position: relative;
-	padding: 0 80px 150px 80px;
-}
-
-#about .about-right-heading h1 {
-	padding-top: 100px;
-}
-
-#about .about-right-boot:before {
-	content: "\f080";
-	font-family: 'FontAwesome';
-	font-size: 45px;
-	padding: 65px 30px 0 0;
-	float: left;
-	color: #28FFF7;
-}
-
-#about .about-right-wrapper {
-    padding-left: 0 0 50px 78px;
-    position: relative;
-	left: 0;
-	top: 75px;
-}
-
-#about .about-right-wrapper a {
-	font-family: 'Raleway', sans-serif;
-	font-weight: 700;
-	color: #282828;
-}*/
-
-/*#about .about-right-wrapper a:hover {
-	color: #28FFF7;
-}
-
-#about .about-right-wrapper p {
-	line-height: 28px;
-	margin-top: 20px;
-	color: #8e8e8e;
-}
-
-#about .about-right-best:before {
-	content: "\f201";
-	font-family: 'FontAwesome';
-	font-size: 45px;
-	padding: 65px 30px 0 0;
-	float: left;
-	color: #28FFF7;
-}
-
-#about .about-right-support:before {
-	content: "\f025";
-	font-family: 'FontAwesome';
-	font-size: 45px;
-	padding: 65px 30px 0 0;
-	float: left;
-	color: #28FFF7;
-}*/
-
 /*Media*/
-@media screen and (min-width: 320px) and (max-width: 520px) {
-	#about {
-		padding: 0;
-	}
-
-	#about .about-heading h2 {
-		margin-top: 30px;
-		font-size: 27px;
-	}
-
-	#about .about-heading p {
-		margin-top: 20px;
-		font-size: 12px;
-		line-height: 20px;
-	}
-
-	#about .about-right:before {
-		content: "";
-	    border: 8px solid #e5eef0;
-		width: 100%;
-	    height: 100%;
-	}
-
-	#about .about-right {
-		position: relative;
-		padding: 30px;
-		margin-top: 20px;
-	}
-
-	#about .about-right-heading h1 {
-		padding-top: 20px;
-		font-size: 25px;
-		text-align: center;
-	}
-
-	#about .about-right-boot:before {
-		font-size: 30px;
-		padding: 20px 20px 0 0;
-	}
-
-	#about .about-right-wrapper {
-	    position: relative;
-		left: 0;
-		top: 35px;
-	}
-
-	#about .about-right-wrapper a > h3 {
-		font-size: 20px;
-	}
-
-	#about .about-right-wrapper p {
-		margin-top: 20px;
-		font-size: 13px;
-	}
-
-	#about .about-right-best {
-		margin-top: 40px;
-	}
-
-	#about .about-right-best:before {
-		font-size: 30px;
-		padding: 20px 20px 0 0;
-	}
-
-	#about .about-right-support {
-		margin-top: 40px;
-	}
-
-	#about .about-right-support:before {
-		font-size: 30px;
-		padding: 20px 20px 0 0;
-	}
-}
-
-/*Media*/
-@media screen and (min-width: 521px) and (max-width: 980px) {
-	#about {
-		margin-top: 50px;
-		padding: 0;
-	}
-
-	#about .about-heading h2 {
-		margin-top: 30px;
-		font-size: 30px;
-	}
-
-	#about .about-heading p {
-		margin-top: 20px;
-		line-height: 20px;
-	}
-
-	#about .about-right:before {
-		content: "";
-	    border: 8px solid #e5eef0;
-		width: 100%;
-	    height: 100%;
-	}
-
-	#about .about-right {
-		position: relative;
-		padding: 30px;
-		margin-top: 20px;
-	}
-
-	#about .about-right-heading h1 {
-		padding-top: 20px;
-		font-size: 25px;
-		text-align: center;
-	}
-
-	#about .about-right-boot:before {
-		font-size: 30px;
-		padding: 20px 20px 0 0;
-	}
-
-	#about .about-right-wrapper {
-	    position: relative;
-		left: 0;
-		top: 35px;
-	}
-
-	#about .about-right-wrapper a > h3 {
-		font-size: 20px;
-	}
-
-	#about .about-right-wrapper p {
-		margin-top: 20px;
-		font-size: 13px;
-	}
-
-	#about .about-right-best {
-		margin-top: 40px;
-	}
-
-	#about .about-right-best:before {
-		font-size: 30px;
-		padding: 20px 20px 0 0;
-	}
-
-	#about .about-right-support {
-		margin-top: 40px;
-	}
-
-	#about .about-right-support:before {
-		font-size: 30px;
-		padding: 20px 20px 0 0;
-	}
-
-}
-
-/*About bg*/
-#about-bg {
-	position: relative;
-	background-image: url(../images/about/about2.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin-top: 100px;
-    text-transform: uppercase;
-    padding: 100px 0;
-    color: #fff;
-}
-
-.about-bg-heading {
-	font-weight: 900;
-	text-align: center;
-	line-height: 40px;
-	z-index: -2;
-}
-
-.about-bg-heading h1 {
-	font-size: 40px
-}
-
-.about-bg-heading p {
-	font-family: 'Raleway', sans-serif;
-	font-weight: 700;
-	font-weight: 400;
-	font-size: 16px;
-}
-
-.about-bg-wrapper {
-	color: #fff;
-	text-align: center;
-	margin-top: 30px;
-	z-index: -2;
-}
-
-#about-bg .about-bg-wrapper .count {
-	font-family: 'Raleway', sans-serif;
-	font-weight: 900;
-	font-size: 45px;
-	margin-right: 20px;
-	text-align: center;
-	float: left;
-	color: #28FFF7;
-}
-
-#about-bg .about-bg-wrapper p {
-	font-family: 'Raleway', sans-serif;
-	font-weight: 400;
-	font-size: 16px;
-	margin-top: 30px;
-	float: left;
-}
-
-/*Media*/
-@media screen and (min-width: 320px) and (max-width: 520px) {
-	.about-bg-heading h1 {
-		font-size: 28px;
-	}
-
-	.about-bg-wrapper {
-		margin-left: 25%;
-	}
-
-}
-
-/*Media*/
-@media screen and (min-width: 521px) and (max-width: 980px) {
-	.about-bg-heading h1 {
-		font-size: 30px;
-	}
-
-	.about-bg-wrapper {
-		margin-left: 35%;
-	}
-
-}
 
 /*Service*/
 #services {
@@ -739,8 +437,7 @@ textarea:focus {
 }
 
 #services .col-md-6 {
-	padding: 0;
-	
+	padding: 0;	
 }
 
 #services .service-heading {
@@ -864,31 +561,10 @@ textarea:focus {
 }
 
 /*Menu*/
-#menu {
-
-}
 
 /*FAQ*/
-#faq {
-}
 
 /*Contact*/
-.contact-heading {
-	text-align: center;
-}
-
-.contact-heading h2 {
-	font-weight: 700;
-	font-size: 45px;
-}
-
-.contact-heading p {
-	margin-top: 20px;
-	line-height: 25px;
-	color: #8e8e8e;
-	margin-bottom: 50px;
-}
-
 .validation {
     color: red;
     display:none;
@@ -926,22 +602,6 @@ textarea:focus {
 	margin-top: 100px;
 }
 
-#contact .contact-heading {
-	text-align: center;
-}
-
-#contact .contact-heading h2 {
-	font-weight: 700;
-	font-size: 36px;
-}
-
-#contact .contact-heading p {
-	margin-top: 20px;
-	line-height: 25px;
-	color: #8e8e8e;
-	margin-bottom: 50px;
-}
-
 #contact .content {
 	margin-top: 50px;
 }
@@ -975,144 +635,15 @@ textarea:focus {
 	color: #fff;
 }
 
-
-/*Map*/
-#google-map{
-    position:relative;
-    margin-top:10px;
-    height: 400px;
-}
-
-/*Client*/
-#client {
-	margin-top: 100px;
-	text-align: center;
-}
-
-#client .col-md-2 {
-	height: 100px;
-}
-
-#client span {
-	height: 100%;
-	display: inline-block;
-	vertical-align: middle;
-}
-
-#client img {
-	max-height: 100px;
-	vertical-align: middle;
-}
-
-/*Media*/
-@media screen and (min-width: 320px) and (max-width: 520px) {
-	#contact {
-		margin-top: 50px;
-	}
-
-	#contact .contact-heading h2 {
-		font-size: 27px;
-	}
-
-	#contact .contact-heading p {
-		font-size: 13px;
-	}
-}
-
-/*Media*/
-@media screen and (min-width: 521px) and (max-width: 980px) {
-	#contact {
-		margin-top: 50px;
-	}
-
-	#contact .contact-heading h2 {
-		font-size: 30px;
-	}
-
-}
-
-/*Footer*/
-#footer {
-	margin-top: 100px;
-	background-color: #181818;
-	padding: 50px 0;
-}
-
-#footer .footer-heading {
-	font-family: 'Raleway', sans-serif;
-	font-weight: 700;
-	padding: 0 20px;
-	color: #fff;
-}
-
-#footer .footer-heading h3 {
-	font-size: 20px;
-	text-transform: capitalize;
-}
-
-#footer .footer-heading span {
-	border-bottom: 2px solid #28FFF7;
-	padding-bottom: 8px;
-}
-
-#footer .footer-heading p {
-	font-family: 'Open Sans', sans-serif;
-	word-spacing: 3px;
-	font-weight: 300;
-	margin-top: 40px;
-	color: #7e7e7e;
-}
-
-#footer .footer-heading ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-	margin-top: 30px;
-}
-
-#footer .footer-heading li {
-	border-bottom: 1px solid #8b8b8b;
-	padding: 10px 0;
-}
-
-#footer .footer-heading ul > li > a:before {
-	content: "\f10c";
-	font-family: 'FontAwesome';
-	padding-right: 10px;
-}
-
-#footer .footer-heading ul > li > a {
-	font-family: 'Open Sans', sans-serif;
-	font-weight: 300;
-	font-size: 15px;
-	padding-top: 9px;
-	padding-bottom: 9px;
-	color: #7e7e7e;
-}
-
-#footer .footer-heading ul > li > a:hover {
+/*Bottom Footer*/
+#bottom-footer {
+	background-color: #001440;
+	padding: 20px 0;
 	color: #28FFF7;
 }
 
-#footer .insta img {
-	float: left;
-	width: 100px;
-	height: 100px;
-}
-
-.credits a {
-    color: #fff;
-}
-
-/*Bottom Footer*/
-#bottom-footer {
-	background-color: #282828;
-	padding: 20px 0;
-	color: #8e8e8e;
-}
-
 #bottom-footer .footer-right ul > li > a {
-	color: #8e8e8e;
+	color: #28FFF7;
 }
 
 #bottom-footer .footer-right ul > li > a:hover {
