Moving content into partials. Tweaking CSS colors

--- a/themes/dinnerdelights/layout/_partial/inline-scripts.ejs
+++ b/themes/dinnerdelights/layout/_partial/inline-scripts.ejs
@@ -1,2 +1,6 @@
-<%- js('js/jquery') %>
-<%- js('bootstrap/js/bootstrap.min') %>
+    <!-- jQuery -->
+<%- js('js/jquery.min') %>
+<%- js('js/bootstrap.min') %>
+<%- js('js/jquery.flexslider') %>
+<%- js('js/jquery.inview') %>
+<%- js('js/script') %>
