--- a/themes/dinnerdelights/layout/_partial/contact.ejs
+++ b/themes/dinnerdelights/layout/_partial/contact.ejs
@@ -1,6 +1,20 @@
-<div id="contact" class="container-fluid">
-    <div class="row">
-        <div class="col-sm-2 col-sm-offset-4 text-center"><a href="mailto:andrea@mydinnerdelights.com">andrea@mydinnerdelights.com</a></div>
-        <div class="col-sm-2 text-center"><a href="tel:+15156355517">(515) 635-5517</a></div>
+<!--contact form-->
+<div id="contact">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+                <div class="section-heading">
+                    <h2>Contact</h2>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+<section class="content-container">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-2 col-sm-offset-4 text-center"><a href="mailto:andrea@mydinnerdelights.com">andrea@mydinnerdelights.com</a></div>
+            <div class="col-sm-2 text-center"><a href="tel:+15156355517">(515) 635-5517</a></div>
+        </div>
+    </div>
+</section>
