--- a/themes/dinnerdelights/layout/_partial/head.ejs
+++ b/themes/dinnerdelights/layout/_partial/head.ejs
@@ -27,12 +27,14 @@
       <link rel="shortcut icon" href="<%- theme.favicon %>">
     <% } %>
 		
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway" rel="stylesheet">
+    <%- css('css/flexslider.css') %>
     <!-- Bootstrap core CSS -->
-    <%- css('bootstrap/css/bootstrap.min') %>
-    <%- css('bootstrap/css/bootstrap-theme.min') %>
+    <%- css('css/bootstrap.min') %>
     <!-- Font Awesome CSS -->
     <%- css('css/font-awesome.min') %>
-    <%- css('css/site') %>
+    <%- css('css/style') %>
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
