--- a/themes/dinnerdelights/layout/_partial/home.ejs
+++ b/themes/dinnerdelights/layout/_partial/home.ejs
@@ -1,4 +1,32 @@
-<div id="home">
-    <h1>Dinner Delights</h1>
-    <h2>A personal chef service in central Iowa</h2>
-</div>
+<!--slider-->
+<div id="slider" class="flexslider">
+        <ul class="slides">
+            <li>
+                <img src="images/slider/slider1.jpg">
+                <div class="caption">
+                    <h2><span>an awesome website</span></h2>
+                    <h2><span>html theme</span></h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <button class="btn">Read More</button>
+                </div>
+            </li>
+            <li>
+                <img src="images/slider/slider2.jpg">
+                <div class="caption">
+                    <h2><span>yet another slide</span></h2>
+                    <h2><span>html theme</span></h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <button class="btn">Read More</button>
+                </div>
+            </li>
+            <li>
+                <img src="images/slider/slider3.jpg">
+                <div class="caption">
+                    <h2><span>one more slide</span></h2>
+                    <h2><span>html theme</span></h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <button class="btn">Read More</button>
+                </div>
+            </li>
+        </ul>
+    </div>
