Complete minus headshot

--- a/themes/dinnerdelights/layout/_partial/services.ejs
+++ b/themes/dinnerdelights/layout/_partial/services.ejs
@@ -10,52 +10,54 @@
         </div>
     </div>
     <section class="services-style-one">
-        <div class="row clearfix">
-            <div class="col-sm-10 col-sm-offset-1 service-container">
-                <div class="service-block">
-                    <div class="icon-box"><img src="/images/noun_172620_cc.svg" height="100" width="100" alt="" aria-hidden="true" /></div>
-                    <h4>Freezer Meal Parties</h4>
-                    <div class="text">Each month I select a menu of 10-12 meals. You pick any six meals you want to prepare from the menu and
-                        invite some friends over. I do all the shopping and preparation. I will arrive at the party location
-                        an hour before the party to set up. The party lasts about 90 minutes. At the end of the party, everyone
-                        will take home six meals.</div>
-                    <div class="price-container">
-                        <div class="price">
-                            <div class="price-value">$90</div>
-                            <div>3 servings of 6 meals</div>
-                        </div>
-                        <div class="price">
-                            <div class="price-value">$180</div>
-                            <div>6 servings of 6 meals</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="service-block">
-                    <div class="icon-box"><img src="/images/noun_649637_cc.svg" height="100" width="100" alt="" aria-hidden="true" /></div>
-                    <h4>Weekly Menu Planning and Grocery Shopping</h4>
-                    <div class="text">In a rut and tired of cooking the same things? We will work together to create a weekly menu based on
-                        your preferences using new recipes, family recipes, or ideas we brainstormed together. Once the menu
-                        is planned, I will do your grocery shopping and deliver it all to your home.</div>
-                    <div class="row">
-                        <div class="col-xs-12">
+        <div class="container-fluid">
+            <div class="row clearfix">
+                <div class="col-sm-10 col-sm-offset-1 service-container">
+                    <div class="service-block">
+                        <div class="icon-box"><img src="/images/noun_172620_cc.svg" height="100" width="100" alt="" aria-hidden="true" /></div>
+                        <h4>Freezer Meal Parties</h4>
+                        <div class="text">Each month I select a menu of 10-12 meals. You pick any six meals you want to prepare from the menu
+                            and invite some friends over. I do all the shopping and preparation. I will arrive at the party
+                            location an hour before the party to set up. The party lasts about 90 minutes. At the end of
+                            the party, everyone will take home six meals.</div>
+                        <div class="price-container">
                             <div class="price">
-                                <div class="price-value">$20</div>
-                                <div>per hour <br/>+ cost of food</div>
+                                <div class="price-value">$90</div>
+                                <div>3 servings of 6 meals</div>
+                            </div>
+                            <div class="price">
+                                <div class="price-value">$180</div>
+                                <div>6 servings of 6 meals</div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="service-block">
-                    <div class="icon-box"><img src="/images/noun_782390_cc.svg" height="100" width="100" alt="" aria-hidden="true" /></div>
-                    <h4>Personal Chef Services</h4>
-                    <div class="text">We work together to create a menu. I can do everything from preparing dinners to making three meals a
-                        day and everything in between.</div>
-                    <div class="row">
-                        <div class="col-xs-12">
-                            <div class="price">
-                                <div>Starting at</div>
-                                <div class="price-value">$100</div>
-                                <div>per week</div>
+                    <div class="service-block">
+                        <div class="icon-box"><img src="/images/noun_649637_cc.svg" height="100" width="100" alt="" aria-hidden="true" /></div>
+                        <h4>Weekly Menu Planning and Grocery Shopping</h4>
+                        <div class="text">In a rut and tired of cooking the same things? We will work together to create a weekly menu based
+                            on your preferences using new recipes, family recipes, or ideas we brainstormed together. Once
+                            the menu is planned, I will do your grocery shopping and deliver it all to your home.</div>
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <div class="price">
+                                    <div class="price-value">$20</div>
+                                    <div>per hour <br/>+ cost of food</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="service-block">
+                        <div class="icon-box"><img src="/images/noun_782390_cc.svg" height="100" width="100" alt="" aria-hidden="true" /></div>
+                        <h4>Personal Chef Services</h4>
+                        <div class="text">We work together to create a menu. I can do everything from preparing dinners to making three meals
+                            a day and everything in between.</div>
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <div class="price">
+                                    <div>Starting at</div>
+                                    <div class="price-value">$100</div>
+                                    <div>per week</div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -73,7 +75,7 @@
                 </div>
                 <div class="col-md-5">
                     <div class="service-footer-right">
-                        <button class="btn">SCHEDULE NOW</button>
+                        <a class="btn" href="#contact">SCHEDULE NOW</a>
                     </div>
                 </div>
             </div>
