--- a/themes/dinnerdelights/layout/_partial/contact.ejs
+++ b/themes/dinnerdelights/layout/_partial/contact.ejs
@@ -9,12 +9,29 @@
             </div>
         </div>
     </div>
-</div>
-<section class="content-container">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-2 col-sm-offset-4 text-center"><a href="mailto:andrea@mydinnerdelights.com">andrea@mydinnerdelights.com</a></div>
-            <div class="col-sm-2 text-center"><a href="tel:+15156355517">(515) 635-5517</a></div>
+    <section class="contact-container">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 text-center">
+                    <a href="mailto:andrea@mydinnerdelights.com">
+                        <i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;andrea@mydinnerdelights.com
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 text-center">
+                    <a href="tel:+15156355517">
+                        <i class="fa fa-mobile" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;(515) 635-5517
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 text-center">
+                    <a href="https://www.facebook.com/MyDinnerDelights/">
+                        <i class="fa fa-facebook-official" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;facebook.com/MyDinnerDelights/
+                    </a>
+                </div>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
+</div>
