--- a/themes/dinnerdelights/layout/layout.ejs
+++ b/themes/dinnerdelights/layout/layout.ejs
@@ -9,7 +9,7 @@
             <nav class="navbar">
                 <div class="container">
                     <div class="navbar-header">
-                        <a href="index.html" class="navbar-brand" style="fill:#fff"><img alt="Dinner Delights" src="/images/noun_98939_cc.svg">Dinner Delights</a>
+                        <a href="/" class="navbar-brand" style="fill:#fff"><img alt="Dinner Delights" src="/images/noun_98939_cc.svg">Dinner Delights</a>
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#ftheme">
 							<span class="sr-only">Toggle</span>
 							<span class="icon-bar"></span>
