--- a/themes/dinnerdelights/layout/_partial/about.ejs
+++ b/themes/dinnerdelights/layout/_partial/about.ejs
@@ -11,8 +11,10 @@
         </div>
     </div>
     <div class="container about-content">
-        <div class="row">
-            <div class="col-xs-12">
+            <div class="headshot">
+                <img src="/images/headshot.jpg" alt="Andrea" class="img-responsive"/>
+            </div>
+            <div class="text">
                 <p>We are all busy all the time but we still need to eat. Dinner Delights offers personal chef services from
                     weekly meal preparation to monthly freezer meal parties.</p>
                 <p>After too many nights staring at the fridge with no easy to prepare meals and no time, I started making freezer
@@ -20,6 +22,5 @@
                     a little smoother.</p>
                 <p>I started Dinner Delights to help your busy nights go a little smoother too!</p>
             </div>
-        </div>
     </div>
 </div>
