--- a/themes/dinnerdelights/source/css/style.css
+++ b/themes/dinnerdelights/source/css/style.css
@@ -467,11 +467,37 @@ textarea:focus {
 
 
 /*About*/
-#about .about-content {
+.about-content {
 	border: 8px solid rgba(40, 255, 247, 0.4);
-	padding: 10vw;
+	padding: 5vw;
+	margin: 5px;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	align-items: stretch;
+	margin-left: auto;
+	margin-right: auto;
 }
 
+.about-content .headshot,
+.about-content .text { 
+	flex: 1 0 100%;
+	padding: 10px;
+}
+
+.about-content .text {
+	align-self: center;
+}
+
+@media (min-width: 768px) {
+	.about-content .headshot {
+		flex: 1 0 33%;
+	}
+
+	.about-content .text {
+		flex: 2 0 66%;
+	}
+}
 
 /*Media*/
 
