--- a/themes/dinnerdelights/layout/_partial/head.ejs
+++ b/themes/dinnerdelights/layout/_partial/head.ejs
@@ -26,6 +26,15 @@
     <% if (theme.favicon){ %>
       <link rel="shortcut icon" href="<%- theme.favicon %>">
     <% } %>
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#28fff7">
+    <meta name="msapplication-TileColor" content="#28fff7">
+    <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+    <meta name="theme-color" content="#28fff7">
 		
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway" rel="stylesheet">
     <%- css('css/flexslider.css') %>
